--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,17 +1,17 @@
 spring:
-#  datasource:
-#    url: jdbc:h2:mem:test // 메모리모드로 실행
-#    username: sa
-#    password:
-#    driver-class-name: org.h2.Driver
-#
-#  jpa:
-#    hibernate:
-#      ddl-auto: create
-#    properties:
-#      hibernate:
-#        #show_sql: true
-#        format_sql: true
+  datasource:
+    url: jdbc:h2:mem:test // 메모리모드로 실행
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        #show_sql: true
+        format_sql: true
 
 logging.level:
   org.hibernate.SQL: debug
